# ray_tracing

./: .gitignore  CMakeLists.txt  README.md  camera.h  color.h  hittable.h  hittable_list.h  improvement_logs.MD  interval.h  main.cpp  material.h  ray.h  rtinclude.h  sphere.h  timer.h  vec3.h
